# SOLock

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: database.rs  known_programs.rs  main.rs  websocket.rs
api/src/routes/: mod.rs
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/providers/: query-provider.tsx
dashboard/components/: connection-status.tsx  contention-chart.tsx  header.tsx  hot-accounts-table.tsx  stats-cards.tsx
dashboard/hooks/: use-lock-stream.ts  use-websocket.ts
dashboard/lib/: api.ts  known-accounts.ts  utils.ts
indexer/: Cargo.toml
indexer/src/: config.rs  database.rs  known_programs.rs  live_tracker.rs  lock_detector.rs  main.rs  rpc_stream.rs
migrations/: 001_initial_schema.sql
