[workspace]
members = [
    "indexer",
    "api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Solana Lock Dashboard Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Solana
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"

# Database - removed from workspace, configured per-crate to avoid MySQL dependencies
# sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "time", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# Time
chrono = "0.4"
time = "0.3"
