[package]
name = "lock-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# Solana
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }

# Database (using tokio-postgres directly to avoid dependency conflicts)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.12"

# Serialization & Config
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling & logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
bs58 = "0.5"
futures = "0.3"
once_cell = "1.19"
